--- a/iOS/MusicFinder/SearchVC.xib
+++ b/iOS/MusicFinder/SearchVC.xib
@@ -32,7 +32,7 @@
                         <constraint firstAttribute="height" constant="40" id="oiD-7T-l99"/>
                     </constraints>
                     <nil key="textColor"/>
-                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="15"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joK-Ya-3sT">
@@ -42,7 +42,7 @@
                         <constraint firstAttribute="height" constant="40" id="Bfs-mV-kzB"/>
                         <constraint firstAttribute="width" constant="160" id="dlo-z4-DML"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
                     <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" title="Rechercher"/>
                     <connections>
@@ -58,7 +58,7 @@
                                 <fragment content="Ajoutez les musiques que vous souhaitez dans un de vos quizz ou écoutez un extrait d'un morceau ">
                                     <attributes>
                                         <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <font key="NSFont" size="16" name="HiraginoSans-W3"/>
+                                        <font key="NSFont" size="16" name="HelveticaNeue-Light"/>
                                         <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="7" tighteningFactorForTruncation="0.0"/>
                                     </attributes>
                                 </fragment>
